file explorer: prevent long folder names from wrapping

--- a/SD/wifi/file-explorer/file-explorer.css
+++ b/SD/wifi/file-explorer/file-explorer.css
@@ -49,7 +49,7 @@
     user-select: none;
   }
 
-  .css-treeview span {
+  .css-treeview span,label {
     cursor: pointer;
     white-space: nowrap;
   }
